# ai-finder

./: .env.example  .gitignore  README.md  alembic.ini  depends.py  docker-compose.yaml  main.py  pyproject.toml
backend/: __init__.py  log.py
backend/api/: routers.py  security.py
backend/api/routes/ai/: __init__.py
backend/api/routes/chat/: __init__.py
backend/api/routes/document/: __init__.py
backend/api/routes/message/: __init__.py
backend/api/routes/user/: __init__.py
backend/database/: __init__.py
backend/database/alembic/: env.py
backend/database/alembic/versions/: 15b020360f78_add_timezone_for_datetime.py  869b7734c65d_init_migration.py  ab09e3740bda_init_migration.py  ed59e075eb50_init_migration.py
backend/database/models/: Chat.py  Document.py  DocumentChunk.py  Message.py  User.py  __init__.py  chat.py  document.py  document_chunk.py  message.py  user.py
backend/schemas/: ai_schema.py  chat_schema.py  document_schema.py  message_schema.py  user_schema.py
backend/services/: __init__.py  chat_service.py  document_service.py  embedding_service.py  loader_service.py  message_service.py  ollama_service.py  user_service.py  vector_service.py  vector_store_service.py
config/: __init__.py  database.py
frontend/: auth.js  index.html  registration-view.html  script.js  script2.js  style.css
