[project]
name = "ai-finder"
version = "0.1.0"
description = "Local AI Document Search"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "sqlalchemy>=2.0.51",
]

[dependency-groups]
lint = [
    "ruff>=0.15.17",
]

[tool.ruff]
line-length = 88
target-version = "py310"
fix = true